<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/gray_0E"
    tools:context="layout.Registro">

    <TextView
        android:text="INGRESE A CONTINUACIóN LOS DATOS SOLICITADOS"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:id="@+id/textView3"
        android:layout_marginTop="85dp" />

    <Button
        android:id="@+id/btn_continuar_id"
        android:text="@string/btn_continuar_lbl"
        style="@style/vimedoButton"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/circlebutton"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/reg_nombre_ape_id"
            android:text=""
            android:hint="@string/reg_nombre_ape"
            android:inputType="textPassword"
            style="@style/formInput"
            />

        <EditText
            android:id="@+id/reg_fecha_nac_id"
            android:text=""
            android:hint="@string/reg_fecha_nac"
            android:inputType="textEmailAddress"
            style="@style/formInput"/>

        <EditText
            android:id="@+id/reg_documento_id"
            android:text=""
            android:hint="@string/reg_documento"
            android:inputType="textPassword"
            style="@style/formInput"/>

        <EditText
            android:id="@+id/reg_calle_nro_id"
            android:text=""
            android:hint="@string/reg_calle_nro"
            android:inputType="textPassword"
            style="@style/formInput"/>

        <EditText
            android:id="@+id/reg_localidad_id"
            android:text=""
            android:hint="@string/reg_localidad"
            android:inputType="textPassword"
            style="@style/formInput"/>

        <EditText
            android:id="@+id/reg_provincia_id"
            android:text=""
            android:hint="@string/reg_provincia"
            android:inputType="textPassword"
            style="@style/formInput"/>

        <EditText
            android:id="@+id/reg_telefono_id"
            android:text=""
            android:hint="@string/reg_telefono"
            android:inputType="textPassword"
            style="@style/formInput"/>

    </LinearLayout>


</RelativeLayout>
