<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/pac_vis_pen_asignado_container_id"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentTop="true" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pac_calif_prof_img_id"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/user_icon_24dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/pac_calif_nomape_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/gray_05"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/pac_calif_especialidad_id"
            android:gravity="center"
            android:textColor="@color/gray_08"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/_por_profesional"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:id="@+id/pac_udfue" />
        <TextView
            android:text="@string/puntuacion_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pac_calif_general"
            android:textAlignment="center"
            android:textSize="14sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/pac_rb_general"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:numStars="5"
            android:layout_gravity="center"
            android:progressTint="@color/vimedo_orange"
            android:progressBackgroundTint="@color/gray_05"
            android:secondaryProgressTint="@color/gray_05" />

        <TextView
            android:text="@string/puntuacion_amabilidad"
            android:layout_marginTop="5dp"
            android:id="@+id/pac_amabilidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/pac_rb_amabilidad"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:numStars="5"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:progressTint="@color/vimedo_orange"
            android:progressBackgroundTint="@color/gray_05"
            android:secondaryProgressTint="@color/gray_05" />

        <TextView
            android:text="@string/puntuacion_claridad"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pac_claridad"
            android:gravity="center"
            android:textSize="14sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/pac_rb_claridad"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:numStars="5"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:progressTint="@color/vimedo_orange"
            android:progressBackgroundTint="@color/gray_05"
            android:secondaryProgressTint="@color/gray_05"/>

        <TextView
            android:text="@string/puntuacion_puntualidad"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pac_puntualidad"
            android:gravity="center"
            android:textSize="14sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/pac_rb_puntualidad"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:numStars="5"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:progressTint="@color/vimedo_orange"
            android:progressBackgroundTint="@color/gray_05"
            android:secondaryProgressTint="@color/gray_05"/>
    </LinearLayout>

            <Button
                android:id="@+id/btn_calificar"
                android:text="@string/btn_calificar_lbl"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:textColor="#ffffff"
                android:background="@drawable/circlebutton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp" />

</RelativeLayout>