<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/mainBackgroundColor"
    tools:context="layout.Registro">

    <Button
        android:id="@+id/btn_continuar_id"
        android:text="@string/btn_registrarse_lbl"
        style="@style/vimedoButton"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/soy_prof_CB_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:id="@+id/soy_prof_tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/soy_prof_CB_id"
                android:layout_toEndOf="@id/soy_prof_CB_id"
                android:text="@string/soy_prof_text"
                android:layout_centerVertical="true"
                android:clickable="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">
            <Spinner
                android:id="@+id/prepaga_CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"/>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/area_credencial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_credencial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintTextInputLayout">
                <EditText
                    android:id="@+id/reg_credencial_input_id"
                    android:text=""
                    android:hint="@string/reg_credencial"
                    android:inputType="text"
                    style="@style/formInput"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/area_mp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:visibility="gone">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintTextInputLayout">
                <EditText
                    android:id="@+id/reg_mp_input_id"
                    android:text=""
                    android:hint="@string/reg_mp"
                    android:inputType="text"
                    style="@style/formInput"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintTextInputLayout">
                <EditText
                    android:id="@+id/reg_email_input_id"
                    android:text=""
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/formInput"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintTextInputLayout">
        <EditText
            android:id="@+id/reg_pass_input_id"
            android:text=""
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/formInput"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_re_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintTextInputLayout">
        <EditText
            android:id="@+id/reg_confirm_pass_input_id"
            android:text=""
            android:hint="@string/reg_pass_confirm"
            android:inputType="textPassword"
            style="@style/formInput"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/terminos_CB_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:id="@+id/reg_terminos_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/terminos_CB_id"
                android:layout_toEndOf="@id/terminos_CB_id"
                android:layout_centerVertical="true"
                android:clickable="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
