<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/mainBackgroundColor"
    android:paddingBottom="5dp"
    tools:context="layout.Registro">

    <Button
        android:id="@+id/btn_registrar_solicitud_medico_id"
        android:text="@string/registrar_pedido"
        style="@style/vimedoButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_above="@+id/btn_registrar_solicitud_medico_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/sintomas"
                 android:textSize="20sp"
                 android:background="@color/gray_0C"
                 android:tint="#55ff0000"/>
             <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mainBackgroundColor"
                 android:orientation="vertical"
                 android:layout_gravity="top"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:gravity="center" >
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/til_mp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:hintTextAppearance="@style/HintTextInputLayout">
                     <EditText
                         android:id="@+id/sol_med_sintomas"
                         android:inputType="textMultiLine"
                         android:hint="@string/sintomas_hint"
                         android:textSize="15sp"
                         android:lines="4"
                         android:minLines="4"
                         android:maxLines="4"
                         android:gravity="top"
                         android:background="@color/white"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:scrollbars="vertical" />
                 </android.support.design.widget.TextInputLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="25dp">
                     <TextView
                         android:text="@string/tiempo"
                         android:gravity="start"
                         android:layout_gravity="start"
                         android:textSize="15sp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/white">
                         <Spinner
                             android:id="@+id/sol_med_horas"
                             android:spinnerMode="dropdown"
                             android:scrollbars="vertical"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                         </Spinner>
                     </FrameLayout>
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginStart="15dp"
                         android:layout_weight="1"
                         android:background="@color/white">
                         <Spinner
                             android:id="@+id/sol_med_minutos"
                             android:spinnerMode="dropdown"
                             android:scrollbars="vertical"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                         </Spinner>
                     </FrameLayout>
                 </LinearLayout>
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:background="@color/white">
                     <ar.com.itr.vimedo.util.MultiSelectionSpinner
                         android:id="@+id/sol_med_antecedentes"
                         android:spinnerMode="dialog"
                         android:scrollbars="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     </ar.com.itr.vimedo.util.MultiSelectionSpinner>
                  </FrameLayout>
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/afiliados_gf"
                 android:textSize="20sp"
                 android:background="@color/gray_0C"
                 android:tint="#55ff0000"/>
             <ListView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/afiliado_list_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mainBackgroundColor"
                 android:orientation="vertical"
                 android:gravity="center" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/domicilios_registrados"
                 android:textSize="20sp"
                 android:background="@color/gray_0C"
                 android:tint="#55ff0000"/>
             <ListView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/domicilio_list_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mainBackgroundColor"
                 android:orientation="vertical"
                 android:gravity="center"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/ltimos_domicilios_utilizados"
                 android:textSize="20sp"
                 android:background="@color/gray_0C"
                 android:tint="#55ff0000"/>
             <ListView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/domicilio_util_list_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mainBackgroundColor"
                 android:orientation="vertical"
                 android:gravity="center"/>
             <Button
                 android:id="@+id/otro_domi_btn_id"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/circlebutton"
                 style="@style/vimedoButton"
                 android:text="@string/agregar_domicilio" />
         </LinearLayout>
     </ScrollView>
</RelativeLayout>



