<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/mainBackgroundColor"
    tools:context="layout.Registro">
    <Button
        android:id="@+id/btn_registrar_solic_id"
        android:text="@string/ingresar_domicilio"
        style="@style/vimedoButton"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintTextInputLayout" >
                    <EditText
                        android:id="@+id/domi_ing_calle"
                        android:text=""
                        android:hint="@string/domicilio"
                        android:inputType="text"
                        style="@style/formInput"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintTextInputLayout" >
                    <EditText
                        android:id="@+id/domi_ing_numero_id"
                        android:text=""
                        android:hint="@string/numero"
                        android:inputType="text"
                        style="@style/formInput"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>